--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@ trained_model/** filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 # Entorno virtual (si necesitas versionarlo)
 phisingmail-detection-cuda/** filter=lfs diff=lfs merge=lfs -text 
+*.safetensors filter=lfs diff=lfs merge=lfs -text
+models/trained_model/** filter=lfs diff=lfs merge=lfs -text
+notebooks/results/** filter=lfs diff=lfs merge=lfs -text
