--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ phisingmail-detection-cuda/** filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 models/trained_model/** filter=lfs diff=lfs merge=lfs -text
 notebooks/results/** filter=lfs diff=lfs merge=lfs -text
+src/models/trained_model/** filter=lfs diff=lfs merge=lfs -text
