--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 # Modelo y archivos grandes
-models/** filter=lfs diff=lfs merge=lfs -text
+models/trained_model/** filter=lfs diff=lfs merge=lfs -text
+models/results/** filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
-models/**/* filter=lfs diff=lfs merge=lfs -text
